Fix section height overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html,
 body,
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 #root {
